[package]
name = "first_plugin"
version = "0.0.1"
authors = ["Fabian Fabro Fihra"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.3"
# vst = { git = "https://github.com/rustaudio/vst-rs" }

[lib]
name = "firstplugin"
crate-type = ["cdylib"]